[package]
name = "dlpi"
version = "0.2.0"
edition = "2021"

[features]
default = ["async"]
async = ["dep:tokio"]

[dependencies]
libc = "0.2"
thiserror = "2.0"
num_enum = "0.7"
pretty-hex = "0.4"
tokio = { version = "1.49.0", features = ["full"], optional = true }
libdlpi-sys = { path = "../libdlpi-sys" }
